--- a/CostumeTest/Pages/Index.cshtml
+++ b/CostumeTest/Pages/Index.cshtml
@@ -1,32 +1,126 @@
 ﻿@page
+@using System.Diagnostics
+@using Microsoft.AspNetCore.Mvc.ModelBinding
 @using ReservationGuest.Components
 @using ReservationGuest.Controllers
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
-<div class="progress" style="width: 65%; margin-left: 18%;">
+<!--<div class="progress" style="width: 65%; margin-left: 18%;">
   <div class="progress-bar" role="progressbar" style="width: 35%; padding-left: 50px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
-<div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
-    <h1>Gegevens</h1>
-    <form method="post"  style=" margin-left: 23px;">
-        <div class="form-inline  form-group">
-            <label for="Name">Volledig naam</label>
-            <input type="text"  asp-for="info.Name" class="form-controls" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
-        </div>
-        <div class="form-inline form-group ">
-            <label for="Email" style="margin-right:10%;">Email      </label>
-            <input type="email" asp-for="info.Email"  class="form-controls" name="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+-->
 
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head runat="server">
+    <title>Reservatie Form</title>
+
+
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.5.js" type="text/javascript"></script>
+
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("div[class=divs]").hide();
+            $("div[id=div1").show();
+            function checkifEmpty() { 
+                if ($("[class=form-controls1]").is(':empty')) {
+                    $filled = false;
+                    console.WriteLine("niet helemaal ingevuld");
+                } else {
+                    $filled = true;
+                    console.WriteLine("wel iets in");
+                }
+                }
+            $("input[type=button][class=buttons]").click(function () {
+                checkifEmpty();
+                if (filled) {
+                    $("div[class=divs]").hide();
+                    $("div[id=div" + $(this).attr("id") + "]").show();
+                }
+            });
+        });
+    </script>
+
+
+</head>
+<body>
+    <form  id="form1" runat="server">
+        <div id="div1" class="divs" style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+            <h1>Gegevens</h1>
+            <div style=" margin-left: 23px;">
+                <div class="form-inline  form-group">
+                    <label for="Name">Volledig naam</label>
+                    <input  type="text" asp-for="info.Name" class="form-controls1" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
+
+                </div>
+                <div class="form-inline form-group ">
+                    <label for="Email" style="margin-right:10%;">Email      </label>
+                    <input type="email" asp-for="info.Email" class="form-controls1" name="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+
+                </div>
+                <div class="form-inline  form-group">
+                    <label for="InputAmount">Aantal personen</label>
+                    <input  type="number" asp-for="info.Amount" class="form-controls1" name="Amount" aria-describedby="Amount" placeholder="0" min="1" max="6" required />
+                </div>
+                <input  id="2" type="button" value="volgende" class="buttons" style="float:right" />
+            </div>
         </div>
-        <div class="form-inline  form-group">
-            <label for="InputAmount">Aantal personen</label>
-            <input type="number"   asp-for="info.Amount"class="form-control" name="Amount" aria-describedby="Amount" placeholder="0" min="1" max="6" required />
+        </form>
+        
+        
+        
+<form method="post">
+
+        <div id="div2" class="divs" style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+                <h1>Datum</h1>
+                <div style=" margin-left: 23px;">
+                    <div>
+                        <input type="date" asp-for="info.date" class="form-controls2" name="date" aria-describedby="FullName" placeholder="Volledige naam" required />
+
+                        <div id="datepicker" data-date="today" style="margin-left: 31%; "></div>
+                        <input name="date" type="hidden" id="my_hidden_input" />
+
+                    </div>
+
+                    <input id="1" type="button" value="vorige" class="buttons" style="float:left" />
+
+                    <input id="3" type="button" value="volgende" class="buttons" style="float:right" />
+                </div>
+            </div>
+
+            <script type="text/javascript">
+                $(function () {
+                    $('#datetimepicker1').datetimepicker();
+                });
+            </script>
+<!--        <br />
+        <br />
+        <input id="3" type="button" value="3" class="buttons" />
+        <div id="div3" class="divs" style="width: 200px; height: 100px; background-color: pink">
+            Div 3
         </div>
-        <button   type="submit" class="btn btn-primary" style="float:right">
-            Volgende
-        </button>
+        <br />
+        <br />
+        <input id="4" type="button" value="4" class="buttons" />
+        <div id="div4" class="divs" style="width: 200px; height: 100px; background-color: pink">
+            Div 4
+        </div>
+        <br />
+        <br />
+        <input id="5" type="button" value="5" class="buttons" />
+        <div id="div5" class="divs" style="width: 200px; height: 100px; background-color: pink">
+            Div 5
+        </div>
+        <br />
+        <br />
+        <input id="6" type="button" value="6" class="buttons" />
+        <div id="div6" class="divs" style="width: 200px; height: 100px; background-color: pink">
+            Div 6
+        </div>
+        <br />
+        <br />-->
     </form>
-</div>
-
+</body>
+</html>
