--- a/CostumeTest/wwwroot/css/site.css
+++ b/CostumeTest/wwwroot/css/site.css
@@ -293,9 +293,19 @@ h4 {
 .CHidden {
     visibility: hidden;
 }
-.TableGroupDIV{
-background-color: #ffff;
-padding-bottom: 30px;
-width: 43%;
-margin-left: 26%;
-margin-top: 40px;
+.TableGroupDIV {
+    background-color: #ffff;
+    padding-bottom: 30px;
+    width: 43%;
+    margin-left: 26%;
+    margin-top: 40px;
+  }
+    .Highlighted a
+
+{
+    background-color: Green !important;
+    background-image: none !important;
+    color: White !important;
+    font-weight: bold !important;
+    font-size: 12pt;
+}
