--- a/CostumeTest/Components/Component.razor
+++ b/CostumeTest/Components/Component.razor
@@ -142,32 +142,32 @@
             <div class="form-inline  form-group">
                 <label for="Datum">Datum</label>
 
-                <label class="form-controls">@CreateRes.date</label>
+                <input type="date" class="form-controls" value="@CreateRes.date"/>
             </div>
             <div class="form-inline form-group ">
                 <label for="Dagdeel">Dagdeel</label>
 
-                <label class="form-controls">@CreateRes.Daypart</label>
+                <input class="form-controls" value="@CreateRes.Daypart"/>
             </div>
             <div class="form-inline form-group ">
                 <label for="Dagdeel">Naam</label>
 
-                <label class="form-controls">@CreateRes.FullName</label>
+                <input type="text" class="form-controls" value="@CreateRes.FullName"/>
             </div>
             <div class="form-inline form-group ">
                 <label for="Dagdeel">E-mail</label>
 
-                <labels class="form-controls" >@CreateRes.Email</labels>
+                <input type="email" class="form-controls"  value="@CreateRes.Email" />
             </div>
             <div class="form-inline form-group ">
                 <label for="Dagdeel">Aantal personen</label>
 
-                <label class="form-controls">@CreateRes.Amount</label>
+                <input type="number" class="form-controls" value="@CreateRes.Amount"/>
             </div>
             <div class="form-inline form-group ">
                 <label for="Dagdeel">Tafel</label>
 
-                <label class="form-controls">@CreateRes.Table</label>
+                <input type="number"class="form-controls" value="@CreateRes.Table"/>
             </div>
 
 
@@ -176,7 +176,7 @@
                 <a href="/Datum">terug</a>
             </button>
 
-            <button type="submit" class="btn btn-primary" style="float:right">
+            <button @onclick="InsertUser" type="submit" class="btn btn-primary" style="float:right">
                 Reservering
             </button>
         </div>
@@ -190,7 +190,8 @@
     async Task NextDiv()
     {
         if (IsValidEmail(CreateRes.Email) != false)
-        {          await JsRuntime.InvokeVoidAsync("NextDiv");
+        {
+            await JsRuntime.InvokeVoidAsync("NextDiv");
 
         }
 
@@ -248,6 +249,10 @@
             con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
             con.NonQueryEx();
             InsertReservation();
+        }
+        else
+        {
+
         }
     }
 
