--- a/ReservationAdmin/Component/SelectReservations.razor
+++ b/ReservationAdmin/Component/SelectReservations.razor
@@ -1,28 +1,173 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using System.Diagnostics
 @using System.Data;
-@using ReservationGuest.Models;
+@using ReservationAdmin.Models;
 @using System.Globalization;
-
 @using Microsoft.JSInterop;
 @inject IJSRuntime JsRuntime;
 
 @code {
-
+    Reservation CreateRes = new Reservation();
+    SqlConnection con = new SqlConnection();
 }
-<form method="post">
+<form>
+    <div style="background-color:#D5DAD7; float :left; width: 35%;  height: 100vh;">
+        <p style="margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Agenda</p>
+        <div style="border-top: 1px solid;padding-bottom: 7px;   margin-left: 2%; width: 95%; ">
+            <h4>Datum</h4>
+            <div class="Form-date">
+                <div style=" margin-left: 23px;">
+                    <div>
+                        <div>
+                            <input type="date" id="txtDate" @bind="CreateRes.date" onkeydown="return false" class="input-group-addon date-div unstyled form-control" max=2025-01-1 />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <h4>Dagdeel</h4>
+                <div class="Daypart-div">
+                    <div class="Daypart">
+                        <button type="button" @onclick="(e => SelectedDaypart(false))" class="btn Daypart-btn Daypart-btn-lunch">
+                            <h5>Lunch</h5>
+                            <p>11:00 - 16:00</p>
+                        </button>
+                        <button type="button" @onclick="(e=> SelectedDaypart(true))" class="btn Daypart-btn   Daypart-btn-diner">
+                            <h5>Dinner</h5>
+                            <p>17:00 - 20:00</p>
+                        </button>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <button type="submit" class="btn-ResAdmin btn btn-primary">
+            Zoek
+        </button>
+
+    </div>
+
+
+</form>
+<div class="Table-div">
+<div class=" card-group" style=" width:500px; height:450px; margin-left: 69px; margin-bottom: 36px; ">
+
+    <table id="myTable" class="table" cellspacing="0">
+        @{
+
+            con.SqlQuery("SELECT reservation.Date, reservation.DayPart, reservation.TableNumber, reservation.Amount, reservation.IsConfirm, guest.FullName FROM reservation INNER JOIN guest ON reservation.Guest = guest.id_Guest WHERE reservation.Date = @date AND reservation.DayPart = @Daypart");
+            con.Cmd.Parameters.AddWithValue("@date", CreateRes.date);
+            con.Cmd.Parameters.AddWithValue("@Daypart", CreateRes.Daypart);
+            con.QueryEx();
+
+        }
+        <thead>
+            <tr>
+                <td>full name</td>
+                <td>tablenumber</td>
+                <td>amount of people</td>
+
+            </tr>
+        </thead>
+        <tbody>
+        
+            @foreach (DataRow dr in con.QueryEx().Rows)
+            {
+                <tr>
+                    <td>@dr[5].ToString()</td>
+                    <td>@dr[2].ToString()</td>
+                    <td>@dr[3].ToString()</td>
+                </tr>
+            }
+        </tbody>
+
+    </table>
+    </div>
+</div>
+
+
+
+
+<!--<div style="background-color:#D5DAD7; float:left; width: 35%;  height: 100vh;">
+    <p style="margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Agenda</p>
+    <form method="post">
         <div class="Form-date">
             <h2>Datum</h2>
             <div style=" margin-left: 23px;">
                 <div>
                     <div>
-                        <input type="date" id="txtDate" onkeydown="return false" class="input-group-addon date-div unstyled form-control" max=2025-01-1 />
+                        <input type="date" id="txtDate" @bind="CreateRes.date" onkeydown="return false" class="input-group-addon date-div unstyled form-control" max=2025-01-1 />
                     </div>
                 </div>
             </div>
         </div>
-</form>
 
+    </form>
+     <div>
+                        <h4>Dagdeel</h4>
+                        <div class="Daypart-div">
+                            <div class="Daypart">
+                                <button type="button" @onclick="(e => SelectedDaypart(false))" class="btn Daypart-btn Daypart-btn-lunch">
+                                            <h5>Lunch</h5>
+                                            <p>11:00 - 16:00</p>
+                                        </button>
+                                        <button type="button" @onclick="(e=> SelectedDaypart(true))" class="btn Daypart-btn   Daypart-btn-diner">
+                                                    <h5>Dinner</h5>
+                                                    <p>17:00 - 20:00</p>
+                                                </button>
+                                                </div>
+
+
+                                                </div>
+    </div>
+</div>
+
+<div>
+    <table id="myTable" class="table" cellspacing="0">
+        @{
+            con.SqlQuery("SELECT reservation.Date, reservation.DayPart, reservation.TableNumber, reservation.Amount, reservation.IsConfirm, guest.FullName FROM reservation INNER JOIN guest ON reservation.Guest = guest.id_Guest WHERE reservation.Date = @date AND reservation.DayPart = @Daypart");
+            con.Cmd.Parameters.AddWithValue("@date", CreateRes.date);
+            con.Cmd.Parameters.AddWithValue("@Daypart", CreateRes.Daypart);
+            con.QueryEx();
+        }
+        <thead>
+        <tr>
+            <td>full name</td>
+            <td>tablenumber</td>
+            <td>amount of people</td>
+
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (DataRow dr in con.QueryEx().Rows)
+        {
+            <tr>
+                <td>@dr[5].ToString()</td>
+                <td>@dr[2].ToString()</td>
+                <td>@dr[3].ToString()</td>
+            </tr>
+        }
+        </tbody>
+
+    </table>
+
+    </div>
+                                                -->
 @code
 {
+
+    void SelectedDaypart(bool SelectedDaypart)
+    {
+        if (SelectedDaypart == false)
+        {
+            CreateRes.Daypart = "Lunch";
+        }
+        else
+        {
+            CreateRes.Daypart = "Dinner";
+        }
+    }
+
 }
